--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,12 @@
   max-width: 550px;
   padding: 20px;
 }
+.App h1 {
+  font-size: 24px;
+  font-weight: 100;
+  margin: 20px 0 5px 0;
+  line-height: 29px;
+}
 
 .App ul {
   list-style: none;
@@ -26,6 +32,7 @@
   color: black;
 }
 .App .celsius-temp {
+  color: black;
   position: relative;
   top: -24px;
   left: -4px;
